Fixes styles spilling
Styles applied to calendar's filters dropdown were spilling into header
where there is a similar dropdown.
Fixed by changing the parent selector so the new styles only apply to
the dropdown in the main content area of the site and not the header.

mario h.

--- a/sites/all/themes/slac/sass/components/_calendar-filters-dropdown.scss
+++ b/sites/all/themes/slac/sass/components/_calendar-filters-dropdown.scss
@@ -1,5 +1,4 @@
-.section-calendar {
-  // Calendar filters dropdown
+.events-calendar {
   .selectize-control {
     .selectize-input {
       border: 3px solid color(grey-blue);
